--- a/insert_image.html
+++ b/insert_image.html
@@ -5,6 +5,6 @@
 
     </head>
     <body>
-      <Img src="image1.jpg" alt="image1" width="400" >
+      <Img src="cat3.jpg" alt="cat3" width="400" >
     </body>
 </html>
